<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="left|right"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20px" >
    </LinearLayout>

    
<LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20px" >    

    <EditText
        android:id="@+id/currentangleLabel"
        android:layout_width="193dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="none"
        android:singleLine="false"
        android:text="@string/currentAngleLabel" />

    <TextView
        android:id="@+id/TextView_CurrentAngle_Value"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:text="0" />
</LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20px" >

        <EditText
            android:id="@+id/tiltadjusterLabel"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="none"
            android:singleLine="false"
            android:text="@string/tiltadjusterLabel" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/TextView_Tilt_adjusterValue"
            android:layout_width="109dp"
            android:layout_height="wrap_content"
            android:text="0" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/SeekBar_Tilt_adjuster"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        android:max="1000"
        android:progress="500" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20px" >

        <EditText
            android:id="@+id/kPadjusterLabel"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="none"
            android:text="@string/kPadjusterLabel" />

        <TextView
            android:id="@+id/TextView_kP_adjusterValue"
            android:layout_width="103dp"
            android:layout_height="wrap_content"
            android:text="0" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/SeekBar_kP_adjuster"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        android:max="1000"
        android:progress="500" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20px" >

        <EditText
            android:id="@+id/kIadjusterLabel"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="none"
            android:text="@string/kIadjusterLabel" />

        <TextView
            android:id="@+id/TextView_kI_adjusterValue"
            android:layout_width="103dp"
            android:layout_height="wrap_content"
            android:text="0" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/SeekBar_kI_adjuster"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        android:max="1000"
        android:progress="500" />

    
<LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20px" >    
    
    <EditText
        android:id="@+id/kDadjusterLabel"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="none"
        android:text="@string/kDadjusterLabel" />

    <TextView
        android:id="@+id/TextView_kD_adjusterValue"
        android:layout_width="103dp"
        android:layout_height="wrap_content"
        android:text="0" />
 </LinearLayout>

  <SeekBar
      android:id="@+id/SeekBar_kD_adjuster"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:indeterminate="false"
      android:max="1000"
      android:progress="500" />

</LinearLayout>